// Vitest Snapshot v1

exports[`should generate themeConfig correcly > Should contain basic properties 1`] = `
{
  "blog": {},
  "darkmode": "switch",
  "encrypt": {},
  "fullscreen": false,
  "locales": {
    "/": {
      "blog": {},
      "encryptLocales": {
        "errorHint": "Please enter the correct password!",
        "placeholder": "Enter password",
        "remember": "Remember password",
        "title": "Page Encrypted",
      },
      "headerDepth": 2,
      "hideSiteNameonMobile": true,
      "lang": "en-US",
      "metaLocales": {
        "author": "Author",
        "category": "Category",
        "contributors": "Contributors",
        "date": "Writing Date",
        "editLink": "Edit this page",
        "lastUpdated": "Last update",
        "next": "Next",
        "origin": "Original",
        "prev": "Prev",
        "readingTime": "Reading Time",
        "tag": "Tag",
        "toc": "On This Page",
        "views": "Page views",
        "words": "Words",
      },
      "navbarAutoHide": "mobile",
      "navbarIcon": true,
      "navbarLocales": {
        "langName": "English",
        "selectLangAriaLabel": "Select language",
        "selectLangText": "Language",
      },
      "outlookLocales": {
        "darkmode": "Theme Mode",
        "fullscreen": "Full Screen",
        "themeColor": "Theme Color",
      },
      "repoDisplay": true,
      "routeLocales": {
        "404msg": [
          "There’s nothing here.",
          "How did we get here?",
          "That’s a Four-Oh-Four.",
          "Looks like we've got some broken links.",
        ],
        "back": "Go back",
        "home": "Take me home",
        "openInNewWindow": "Open in new window",
      },
      "sidebar": "structure",
      "sidebarIcon": true,
    },
  },
  "pure": false,
  "themeColor": false,
}
`;

exports[`should generate themeConfig correcly > Should handle single language 1`] = `
{
  "blog": {},
  "darkmode": "switch",
  "encrypt": {},
  "fullscreen": false,
  "locales": {
    "/": {
      "blog": {},
      "encryptLocales": {
        "errorHint": "Please enter the correct password!",
        "placeholder": "Enter password",
        "remember": "Remember password",
        "title": "Page Encrypted",
      },
      "headerDepth": 2,
      "hideSiteNameonMobile": true,
      "lang": "en-US",
      "metaLocales": {
        "author": "Author",
        "category": "Category",
        "contributors": "Contributors",
        "date": "Writing Date",
        "editLink": "Edit this page",
        "lastUpdated": "Last update",
        "next": "Next",
        "origin": "Original",
        "prev": "Prev",
        "readingTime": "Reading Time",
        "tag": "Tag",
        "toc": "On This Page",
        "views": "Page views",
        "words": "Words",
      },
      "navbar": [
        "/",
        "/about",
      ],
      "navbarAutoHide": "mobile",
      "navbarIcon": true,
      "navbarLocales": {
        "langName": "English",
        "selectLangAriaLabel": "Select language",
        "selectLangText": "Language",
      },
      "outlookLocales": {
        "darkmode": "Theme Mode",
        "fullscreen": "Full Screen",
        "themeColor": "Theme Color",
      },
      "repoDisplay": true,
      "routeLocales": {
        "404msg": [
          "There’s nothing here.",
          "How did we get here?",
          "That’s a Four-Oh-Four.",
          "Looks like we've got some broken links.",
        ],
        "back": "Go back",
        "home": "Take me home",
        "openInNewWindow": "Open in new window",
      },
      "sidebar": [
        "/",
        "/about",
      ],
      "sidebarIcon": true,
    },
  },
  "pure": false,
  "themeColor": false,
}
`;

exports[`should generate themeConfig correcly > locale should have higher property 1`] = `
{
  "blog": {},
  "darkmode": "switch",
  "encrypt": {},
  "fullscreen": false,
  "locales": {
    "/": {
      "blog": {},
      "encryptLocales": {
        "errorHint": "Please enter the correct password!",
        "placeholder": "Enter password",
        "remember": "Remember password",
        "title": "Page Encrypted",
      },
      "headerDepth": 2,
      "hideSiteNameonMobile": true,
      "lang": "en-US",
      "metaLocales": {
        "author": "Author",
        "category": "Category",
        "contributors": "Contributors",
        "date": "Writing Date",
        "editLink": "Edit this page",
        "lastUpdated": "Last update",
        "next": "Next",
        "origin": "Original",
        "prev": "Prev",
        "readingTime": "Reading Time",
        "tag": "Tag",
        "toc": "On This Page",
        "views": "Page views",
        "words": "Words",
      },
      "navbar": [
        "/",
        "/guide",
        "/about",
      ],
      "navbarAutoHide": "mobile",
      "navbarIcon": true,
      "navbarLocales": {
        "langName": "English",
        "selectLangAriaLabel": "Select language",
        "selectLangText": "Language",
      },
      "outlookLocales": {
        "darkmode": "Theme Mode",
        "fullscreen": "Full Screen",
        "themeColor": "Theme Color",
      },
      "repoDisplay": true,
      "routeLocales": {
        "404msg": [
          "There’s nothing here.",
          "How did we get here?",
          "That’s a Four-Oh-Four.",
          "Looks like we've got some broken links.",
        ],
        "back": "Go back",
        "home": "Take me home",
        "openInNewWindow": "Open in new window",
      },
      "sidebar": "structure",
      "sidebarIcon": true,
    },
  },
  "pure": false,
  "themeColor": false,
}
`;

exports[`should generate themeConfig correcly > root only option should not appear in locales 1`] = `
{
  "blog": {},
  "darkmode": "disable",
  "encrypt": {},
  "fullscreen": false,
  "locales": {
    "/": {
      "blog": {},
      "encryptLocales": {
        "errorHint": "Please enter the correct password!",
        "placeholder": "Enter password",
        "remember": "Remember password",
        "title": "Page Encrypted",
      },
      "headerDepth": 2,
      "hideSiteNameonMobile": true,
      "lang": "en-US",
      "metaLocales": {
        "author": "Author",
        "category": "Category",
        "contributors": "Contributors",
        "date": "Writing Date",
        "editLink": "Edit this page",
        "lastUpdated": "Last update",
        "next": "Next",
        "origin": "Original",
        "prev": "Prev",
        "readingTime": "Reading Time",
        "tag": "Tag",
        "toc": "On This Page",
        "views": "Page views",
        "words": "Words",
      },
      "navbarAutoHide": "mobile",
      "navbarIcon": true,
      "navbarLocales": {
        "langName": "English",
        "selectLangAriaLabel": "Select language",
        "selectLangText": "Language",
      },
      "outlookLocales": {
        "darkmode": "Theme Mode",
        "fullscreen": "Full Screen",
        "themeColor": "Theme Color",
      },
      "repoDisplay": true,
      "routeLocales": {
        "404msg": [
          "There’s nothing here.",
          "How did we get here?",
          "That’s a Four-Oh-Four.",
          "Looks like we've got some broken links.",
        ],
        "back": "Go back",
        "home": "Take me home",
        "openInNewWindow": "Open in new window",
      },
      "sidebar": "structure",
      "sidebarIcon": true,
    },
  },
  "pure": true,
  "themeColor": false,
}
`;

exports[`should generate themeConfig correcly > should fallback to root if locale config is missing 1`] = `
{
  "blog": {},
  "darkmode": "switch",
  "encrypt": {},
  "fullscreen": false,
  "locales": {
    "/": {
      "blog": {},
      "encryptLocales": {
        "errorHint": "Please enter the correct password!",
        "placeholder": "Enter password",
        "remember": "Remember password",
        "title": "Page Encrypted",
      },
      "headerDepth": 2,
      "hideSiteNameonMobile": true,
      "lang": "en-US",
      "metaLocales": {
        "author": "Author",
        "category": "Category",
        "contributors": "Contributors",
        "date": "Writing Date",
        "editLink": "Edit this page",
        "lastUpdated": "Last update",
        "next": "Next",
        "origin": "Original",
        "prev": "Prev",
        "readingTime": "Reading Time",
        "tag": "Tag",
        "toc": "On This Page",
        "views": "Page views",
        "words": "Words",
      },
      "navbar": [
        "/",
        "/about",
      ],
      "navbarAutoHide": "mobile",
      "navbarIcon": true,
      "navbarLocales": {
        "langName": "English",
        "selectLangAriaLabel": "Select language",
        "selectLangText": "Language",
      },
      "outlookLocales": {
        "darkmode": "Theme Mode",
        "fullscreen": "Full Screen",
        "themeColor": "Theme Color",
      },
      "repoDisplay": true,
      "routeLocales": {
        "404msg": [
          "There’s nothing here.",
          "How did we get here?",
          "That’s a Four-Oh-Four.",
          "Looks like we've got some broken links.",
        ],
        "back": "Go back",
        "home": "Take me home",
        "openInNewWindow": "Open in new window",
      },
      "sidebar": "structure",
      "sidebarIcon": true,
    },
  },
  "pure": false,
  "themeColor": false,
}
`;
